--- a/client/src/components/Projects/Projects.css
+++ b/client/src/components/Projects/Projects.css
@@ -1,7 +1,7 @@
 .projects-header {
   text-align: center;
   font-weight: 100;
-  margin: 100px 0px 70px;
+  margin: 40px 0 0;
   color: #3c3050;
 }
 
@@ -10,10 +10,11 @@
   flex-wrap: wrap;
   flex-grow: 1;
   justify-content: center;
+  padding-bottom: 20px;
 }
 
 .project {
-  margin: 20px;
+  margin: 0 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,15 +22,17 @@
 }
 
 .project img {
-  height: 260px;
   width: 100%;
-  padding: 30px 0;
+  padding: 20px 0 10px;
   -moz-transition: all 0.4s;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
 }
 
 @media only screen and (min-width: 760px) {
+  .projects-header {
+    margin: 100px 0px 70px;
+  }
   .project img {
     width: 360px;
     cursor: pointer;
