--- a/client/src/components/Services/Services.css
+++ b/client/src/components/Services/Services.css
@@ -13,7 +13,7 @@
 }
 
 .service {
-  height: 420px;
+  height: 70vh;
   width: 100%;
   display: flex;
   flex-direction: column;
