--- a/client/src/components/Testimonials/Testimonials.css
+++ b/client/src/components/Testimonials/Testimonials.css
@@ -15,6 +15,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-content: space-around;
+  padding-bottom: 20px;
 }
 
 .testimonial {
